# video-cleaner

./: .gitignore  README.md  pyproject.toml
docker/: Dockerfile.dev  build.sh  run.sh
video_cleaner/models/: __init__.py  inpaint_generator.py  recurrent_flow_completion.py  sparse_transformer.py  utils.py
video_cleaner/models/raft/: corr.py  encoder.py  raft.py  update_block.py
video_cleaner/pipelines/: pipeline_propainter.py  pipeline_raft.py  pipeline_raft_trt.py
video_cleaner/utils/: io.py  trt_engine.py
