[tool.poetry]
name = "video-cleaner"
version = "0.1.0"
description = ""
authors = ["Ming Yang <ymviv@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.13"
av = "^11.0.0"
scipy = "^1.11.3"
safetensors = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
